<resources>
    <string name="app_name">PlanToPlate</string>
    <string name="plantoplate">PlanToPlate</string>
    <string name="logowanie">Logowanie</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="pomy_lnie_z">Pomyślnie zarejestrowano</string>
    <string name="przyp_haslo">Przypomnienie hasła</string>
    <string name="twoj_email"> Wprowadź e-mail,
przy pomocy którego
logujesz się do aplikacji</string>
    <string name="wprowad_kod">Wprowadź kod
zaproszeniowy:</string>
    <string name="potwierdzen">Potwierdzenie e-maila</string>
    <string name="skorzystaj_">W celu weryfikacji konta,
wprowadź 4 cyfrowy kod,
który do Ciebie wysłaliśmy na</string>
    <string name="skorzystaj_2">W celu weryfikacji
konta, wprowadź 4
cyfrowy kod, który do
Ciebie wysłaliśmy na mail,
        który był podany wcześniej</string>
    <string name="uwaga_do_cz">Uwaga! Do czasu potwierdzenia maila wejście nie będzie możliwe!</string>
    <string name="wyra_am_zgo">Wyrażam zgodę na przetwarzanie
danych osobowych</string>
    <string name="masz_konto_">Masz konto?</string>
    <string name="zaloz_konto">Załóż konto</string>
    <string name="wprowadz_haslo">Wprowadź hasło</string>
    <string name="wprowadz_new_haslo">Wprowadź nowe hasło</string>
    <string name="wprowadz_new_haslo_2">Wprowadź hasło ponownie</string>
    <string name="wprowadz_imie">Wprowadź imię</string>
    <string name="wprowadz_kod">Wprowadź kod</string>
    <string name="wprowadz_ilosc">Wprowadź ilość</string>
    <string name="zatwierdz">Zatwierdź</string>
    <string name="anuluj">Anuluj</string>
    <string name="usun">Usuń</string>
    <string name="wprowadzenie_spizarnia">Tutaj możesz zobaczyć produkty, które są przechowywane w Twoim domu.
Aby dodać produkty do spiżarni, kliknij znak plus.</string>
    <string name="wprowadzenie_lista_zakupow_trzeba_kupic">Aby dodać produkty do listy zakupów, kliknij znak plus.</string>
    <string name="wprowadzenie_lista_zakupow_kupione">Aby dodać produkty do listy zakupionych,
wróć do listy zakupów i zaznacz wybrany produkt haczykiem.</string>
    <string name="wprowadzenie_baza_wlasne">Zostaną dodane produkty przez Ciebie lub Twoją grupę.
Aby dodać nowy produkt, kliknij znak plus.
Uwaga!
Użytkownik z rolą "dziecko" nie może dodać nowego produktu.</string>
    <string name="wprowadzenie_przepisy_ulubione">Aby dodać przepis do kategorii ulubionych,
kliknij na plus. Przeniesie Cię na stronę internetową, na której będziesz musiał się zalogować i
wybrać przepisy, które pojawią się później w tej kategorii.
Uwaga!
Użytkownik z rolą "dziecko" nie może dodać ulubionego przepisu.</string>
    <string name="wprowadzenie_kalendarz">Aby zaplanować przepis, przejdź do kategorii przepisy za
pomocą przyciku plus.</string>
    <string name="zmien_kategorie">Zmień kategorie</string>
    <string name="wprowadz_email">Wprowadź e-mail</string>
    <string name="zalogowanie">Załoguj się</string>
    <string name="wygenerowanie_kodu">Wygenerowanie kodu</string>
    <string name="kod_dla_osoby_doroslej">Kod dla osoby dorosłej</string>
    <string name="kod_dla_dziecka">Kod dla dziecka</string>
    <string name="wybierz_opcje">Wybierz jedną opcję:</string>
    <string name="uwaga">Uwaga! Wybrana opcja wygenerowanego
kodu wpłynie na to, jakie opcje będą dostępne
dla użytkownika, który go wprowadzi.
Rolę użytkownika można zmienić w dowolnym
momencie w ustawieniach użytkownika</string>
    <string name="przekarz_kod">Przekaż poniższy kod
wybranemu uzytkownikowi</string>
    <string name="wy_lij_pono">Wyślij ponownie</string>
    <string name="nie_masz_konto_">Nie masz konta?</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="spizarnia">Spiżarnia</string>
    <string name="lista_zakupow">Lista zakupów</string>
    <string name="przepisy">Przepisy</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="zmien_temat"> Zmień temat aplikacji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="przypomnij_haslo">Przypomnij hasło</string>
    <string name="wybierz_jadna_opcje">Wybierz jedną z opcji:</string>
    <string name="mam_zapr_do_gr">Mam zaproszenie do grupy*</string>
    <string name="podpowiedz_gr">* Jeżeli chcesz dołączyć się do
użytkownika, który już ma konto.</string>
    <string name="swoja_gr">Chcę założyć własną grupę</string>
    <string name="trzeba_kupic">Trzeba kupić</string>
    <string name="kupione">Kupione</string>
    <string name="wszystkie">Wszystkie</string>
    <string name="wlasne">Własne</string>
    <string name="baza_produktow">Baza produktów</string>
    <string name="search_hint">Wyszukaj produkt</string>
    <string name="text_baza">Dodawanie własnego
produktu</string>
    <string name="nazwa_produktu">Wprowadź nazwę produktu</string>
    <string name="jednostki_miary">Jednostki miary</string>
    <string name="szt">SZT</string>
    <string name="l">L</string>
    <string name="ml">ML</string>
    <string name="kg">KG</string>
    <string name="gr">G</string>
    <string name="edycja">Edycja produktu</string>
    <string name="nowe_jednostki_miary">Wybierz nową jednostkę miary</string>
    <string name="delete_from_shopping_list">Czy na pewno
chcesz usunąć produkt
z listy zakupów?</string>
    <string name="delete_from_base">Czy na pewno
chcesz usunąć produkt
z bazy produktów?</string>
    <string name="add_to_storage">Czy na pewno
chcesz dodać wszystkie kupione produkty do spiżarni?</string>
    <string name="delete_from_storage">Czy na pewno
chcesz usunąć produkt
ze spiżarni?</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="synchronizacja">Kliknij, aby dodać do listy zakupów tylko te produkty, których nie masz w spiżarni (w odpowiednich ilościach). </string>
    <string name="do_listy">Przepis już został zaplanowany. Jeżeli chcesz dodać produkty z przepisu do listy zakupów, kliknij "OK".</string>
    <string name="cook_recepie">Zaplanowany przepis zostanie potraktowany jako przygotowany. Produkty zużyte zostaną automatycznie usunięte ze spiżarni.</string>
    <string name="delete_recipe">Zaplanowany przepis zostanie usunięty. Produkty z przepisu nie zostaną usunięte ze spiżarni.</string>
    <string name="do_kalendarzu">Produkty z przepisu już zostały dodane do listy zakupów. Jeśli chcesz również zaplanować przepis w kalendarzu, kliknij "OK".</string>
    <string name="ok">OK</string>
    <string name="zamknij">Zamknij</string>
    <string name="dodac_do_spizarni_ze_spizarni">W twoich kupionych teraz są produkty. Czy dodac kupione produkty do spiżarni?</string>
    <string name="add_to_storage_from_kupione">Czy napewno chcesz dodac kupione produkty do spiżarni?</string>
    <string name="delete_storage_title">Usunięcie ze spiżarni</string>
    <string name="delete_storage_body">Czy napewno chcesz usunąć ten produkt ze spiżarni?</string>
    <string name="delete_baze_title">Usunięcie z bazy produktów</string>
    <string name="delete_baze_body">Czy napewno chcesz usunąć ten produkt z bazy produktów?</string>
    <string name="delete_shopping_list_title">Usunięcie z listy zakupów</string>
    <string name="delete_shopping_list_body">Czy napewno chcesz usunąć ten produkt z listy zakupów?</string>
    <string name="change">Zmiana ilości produktu:</string>
    <string name="ilosc_">Ilość:</string>
    <string name="j_m">Jednostki miary:</string>
    <string name="ilosc">Ilość</string>
    <string name="produkty_mleczne">Produkty mleczne</string>
    <string name="produkty_miesne">Produkty mięsne</string>
    <string name="wypieki">Wypieki</string>
    <string name="warzywa">Warzywa</string>
    <string name="produkty_sypkie">Produkty sypkie</string>
    <string name="owoce">Owoce</string>
    <string name="napoje">Napoje</string>
    <string name="ryby">Ryby</string>
    <string name="przyprawy">Przyprawy</string>
    <string name="bakalie">Bakalie</string>
    <string name="inne">Inne</string>
    <string name="konserwy">Konserwy</string>
    <string name="kategoria">Kategoria: </string>
    <string name="dodac_ze_spizarni">W twoich kupionych
teraz są produkty.</string>
    <string name="z_kup">Dodać produkty z kupionych</string>
    <string name="dodac_do_spizarni">Dodać kupione produkty do spiżarni</string>
    <string name="przejsc_do_bazy">Przejść do bazy produktów</string>
    <string name="zmiana_danych">Zmiana danych</string>
    <string name="zmiana_imienia">Zmiana imienia</string>
    <string name="zmiana_email">Zmiana email</string>
    <string name="zmiana_hasla">Zmiana hasła</string>
    <string name="usuwanie_konta">Usuwanie konta</string>
    <string name="zmiana_uprawnien">Zmiana uprawnień</string>
    <string name="imie">Imie:</string>
    <string name="mail">Email:</string>
    <string name="Wygenerowanie_kodu">Dodawanie użytkownika do grupy</string>
    <string name="Zmiana_danych">Zarządzanie kontem</string>
    <string name="Zarządzanie_użytkownikami">Zarządzanie użytkownikami w grupie</string>
    <string name="About_us">Napisz do nas</string>
    <string name="Pomoc">Pomoc</string>
    <string name="Wyłoguj">Wyłoguj</string>
    <string name="nowe_imie">Nowe imię zostało
zaakceptowane!</string>
    <string name="dalej">Dalej</string>
    <string name="wroc">Wroć</string>
    <string name="wprowadz_nowe_imie">Wprowadź nowe imię</string>
    <string name="zm_im">Wprowadzone przez ciebie imię zostało przyjęte!</string>
    <string name="zm_ac">Wszystkie zmiany zostały zaakceptowane!</string>
    <string name="napisz_do_nas">Napisz do nas</string>
    <string name="dev_adres">plantoplatemobileapp@gmail.com</string>
    <string name="dev_text">Jest to aplikacja, która pomaga w planowaniu diety, śledzeniu tego, co mamy w domu oraz robieniu zakupów.

W razie jakichkolwiek pytań prosimy kontaktówać się z developerami pisząc mail na adres</string>
    <string name="delete_prof_text">UWAGA! Usuwanie konta jest operacją nieodwracalną.

Jeżeli chcesz usunąć swoje konto, podaj maila, którym się logujesz do aplikacji, pisząc na pisząc mail na adres</string>
    <string name="wprowadz_stare_haslo">Wprowadź stare hasło</string>
    <string name="uwaga_log_out">Uwaga!\nZe względów bezpieczeństwa, po zmianie hasła wylogujemy Cię ze wszystkich urządzeń.</string>
    <string name="wprowadz_nowe_haslo">Wprowadź nowe hasło</string>
    <string name="wprowadz_nowe_haslo_ponownie">Wprowadź hasło ponownie</string>
    <string name="accept_new_password">Nowe hasło zostało przyjęte\nUwaga!\nZe względów bezpieczeństwa, po zmianie hasła wylogujemy Cię ze wszystkich urządzeń.</string>
    <string name="wprowadz_nowy_emeil">Wprowadź nowy email</string>
    <string name="wprowadz_nowy_emeil_ponownie">Wprowadź email ponownie</string>
    <string name="accept_new_email">Wprowadzony przez ciebie mail został przyjęty!</string>
    <string name="wszystkie_produkty">Wszystkie</string>
    <string name="user_permissions_text">Czy zmienić uprawnienia użytkownika “imie uzytkownika” z “uprawnienia teraz” na “uprawnienie przeciwne”?</string>
    <string name="zmiana_dabych_uzytkownika">Wybierz użytkownika,
dane którego chcesz zmienić:</string>
    <string name="uwaga_kod">Uwaga! \nKod jest jednorazowy i aktywny w ciągu 30 minut od momentu wygenerowania.</string>
    <string name="kod_zapr">Kod zaproszeniowy</string>
    <string name="przekarz_kod1">Przekaż kod</string>
    <string name="kod_zapr_text">Aby korzystać z aplikacji wspólnie z innymi osobami trzeba najpierw wygenerować kod i przekazać go wybranym użytkownikom.</string>
    <string name="konto_dziecko"> Masz konto z rolą "Dziecko"</string>
</resources>