<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.shoppingList.productsDatabase.AddYourOwnProductFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:text="@string/hello_blank_fragment" />-->

    <TextView
        android:id="@+id/baza_produktow"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/selector_buttons"
        android:clickable="true"
        android:contextClickable="false"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/baza_produktow"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />


    <TextView
        android:id="@+id/baza_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center"
        android:text="@string/text_baza"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baza_produktow"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="238dp"
        android:layout_height="65dp"
        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/nazwa_produktu"

        android:textColorHint="?attr/colorSecondaryVariant"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorOnPrimary"

        app:hintTextColor="?attr/colorSecondaryVariant"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baza_text"
        app:layout_constraintVertical_bias="0.047">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_the_name"
            android:layout_width="238dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:maxLines="1"
            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/kategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/jednostki_miary"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zmien_kategorie"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/zmien_kategorie"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="35dp"

        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"
        android:text="@string/zmien_kategorie"

        android:textAllCaps="false"

        android:textColor="?attr/colorSecondaryVariant"

        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name"
        app:layout_constraintVertical_bias="0.034"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorOnPrimary"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/kategorianapis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/kategoria"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/kategoria_napisac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="Dodane przeze mnie"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name"
        app:layout_constraintVertical_bias="0.029" />

    <RadioGroup
        android:id="@+id/toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kategoria"
        app:layout_constraintVertical_bias="0.097">

        <RadioButton
            android:id="@+id/button_szt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="11dp"
            android:background="@drawable/state_list_button"
            android:button="@null"
            android:clickable="true"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_horizontal|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="SZT"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondaryVariant"
            android:textOff="@string/szt"
            android:textOn="@string/szt"
            android:textSize="13dp"
            app:iconPadding="8dp"
            app:rippleColor="?attr/colorPrimaryVariant"/>

        <RadioButton
            android:id="@+id/button_l"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="11dp"
            android:background="@drawable/state_list_button"
            android:button="@null"
            android:clickable="true"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_horizontal|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="16dp"
            android:text="L"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondaryVariant"
            android:textOff="@string/l"
            android:textOn="@string/l"
            android:textSize="13dp"
            app:iconPadding="8dp"
            app:rippleColor="?attr/colorPrimaryVariant" />

        <RadioButton
            android:id="@+id/button_ml"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="11dp"
            android:background="@drawable/state_list_button"
            android:button="@null"
            android:clickable="true"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_horizontal|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="ML"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondaryVariant"
            android:textOff="@string/ml"
            android:textOn="@string/ml"
            android:textSize="13dp"
            app:iconPadding="8dp"
            app:rippleColor="?attr/colorPrimaryVariant"/>

        <RadioButton
            android:id="@+id/button_kg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="11dp"
            android:background="@drawable/state_list_button"
            android:button="@null"
            android:clickable="true"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_horizontal|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="16dp"
            android:text="KG"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondaryVariant"
            android:textOff="@string/kg"
            android:textOn="@string/kg"
            android:textSize="13dp"
            app:iconPadding="8dp"
            app:rippleColor="?attr/colorPrimaryVariant" />

        <RadioButton
            android:id="@+id/button_gr"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="11dp"
            android:background="@drawable/state_list_button"
            android:button="@null"
            android:clickable="true"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center_horizontal|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="16dp"
            android:text="GR"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondaryVariant"
            android:textOff="@string/gr"
            android:textOn="@string/gr"
            android:textSize="13dp"
            app:iconPadding="8dp"
            app:rippleColor="?attr/colorPrimaryVariant"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_zatwierdz"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="?attr/colorPrimaryVariant"

        android:clickable="true"
        android:drawableLeft="@drawable/done_24_50"

        android:fontFamily="@font/quicksand_medium"
        android:text="@string/zatwierdz"

        android:textAllCaps="false"

        android:textColor="?attr/colorSecondaryVariant"

        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kategoria"
        app:layout_constraintVertical_bias="0.521"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorOnPrimary"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button_anuluj"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:drawableLeft="@drawable/close_24_50"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"

        android:text="@string/anuluj"

        app:strokeColor="?attr/colorOnPrimary"
        app:strokeWidth="1dp"

        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zatwierdz"
        app:layout_constraintVertical_bias="0.297"
        app:rippleColor="?attr/colorPrimaryVariant" />

</androidx.constraintlayout.widget.ConstraintLayout>