<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_0"
    tools:context=".ChoiceAdultOrChild">

    <!-- PlanToPlate -->
    <TextView
        android:id="@+id/plantoplate"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="top"
        android:text="@string/plantoplate"
        android:textAppearance="@style/plantoplate"
        android:textColor="@color/black_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


    <!-- Code generation -->
    <TextView
        android:id="@+id/code_generation"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/wygenerowanie_kodu"
        android:textAppearance="@style/pomy_lnie_z"
        android:textColor="@color/black_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantoplate"
        app:layout_constraintVertical_bias="0.077" />

    <!-- Choose one of the option -->
    <TextView
        android:id="@+id/choose_an_option"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center_horizontal|top"
        android:text="@string/wybierz_opcje"
        android:textAppearance="@style/wprowad_kod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_generation"
        app:layout_constraintVertical_bias="0.095" />

    <!--Code for adult -->
    <Button
        android:id="@+id/code_for_adult"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/blue_1"
        android:clickable="true"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/kod_dla_osoby_doroslej"
        android:textAllCaps="false"
        android:textColor="@color/black_gray"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_an_option"
        app:layout_constraintVertical_bias="0.587"
        app:rippleColor="@color/blue_1" />

    <!--Kod for child-->
    <Button
        android:id="@+id/code_for_child"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/blue_1"
        android:clickable="true"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/kod_dla_dziecka"
        android:textAllCaps="false"
        android:textColor="@color/black_gray"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_for_adult"
        app:layout_constraintVertical_bias="0.325"
        app:rippleColor="@color/blue_1" />


    <!--Uwaga! -->
    <TextView
        android:id="@+id/uwaga"
        android:layout_width="255dp"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"

        android:fontFamily="@font/quicksand_regular"

        android:gravity="top"
        android:text="@string/uwaga"
        android:textAppearance="@style/uwaga_do_cz"
        android:textColor="@color/black_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_for_child" />


    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:layout_constraintTop_toTopOf="parent"-->


</androidx.constraintlayout.widget.ConstraintLayout>